[gd_scene format=3 uid="uid://cnsm02rbbt4qw"]

[ext_resource type="Script" path="res://scripts/ui/upgrade_shop.gd" id="1_shop"]

[node name="UpgradeShop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_shop")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 760.0
offset_top = 50.0
offset_right = 1160.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 48
text = "強化ショップ"
horizontal_alignment = 1

[node name="GoldLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 760.0
offset_top = 120.0
offset_right = 1160.0
offset_bottom = 160.0
theme_override_font_sizes/font_size = 32
text = "所持G: 0"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 180.0
offset_right = 1520.0
offset_bottom = 900.0

[node name="ItemContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 860.0
offset_top = 950.0
offset_right = 1060.0
offset_bottom = 1000.0
text = "戻る"
